--- a/index.html
+++ b/index.html
@@ -1,13 +1,206 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Test</h1>
-</body>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kameron:wght@700&family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/vendors/bootstrap-reboot.css" />
+    <link rel="stylesheet" href="styles/vendors/swiper.min.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <div id="global-container">
+      <div id="container">
+        <div class="mobile-menu__cover"></div>
+            <header class="header">
+              <div class="header__inner">
+                <div class="logo">
+                  <img src="images/logo.png" alt="" class="logo__img">
+                  <spna class="logo__title">大曲の花火</spna>
+                </div>
+                <nav class="header__nav">
+                  <ul class="header__ul">
+                    <li class="header__li"><a href="#">Service</a></li>
+                    <li class="header__li"><a href="#">Contact</a></li>
+                    <li class="header__li"><a href="#">Company</a></li>
+                    <!-- <li class="header__li"><a href="#">Sitemap</a></li> -->
+                  </ul>
+                </nav>
+                <button class="mobile-menu__btn">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+              </button>
+              </div>
+            </header>
+        <div id="content">
+          <div class="hero">
+            
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="hero__title">2010年大曲の花火</div>
+                  <img src="images/image-1.jpg" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <div class="hero__title">2009年大曲の花火</div>
+                  <img src="images/image-2.jpg" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <div class="hero__title">2013年大曲の花火</div>
+                  <img src="images/image-3.jpg" alt="" />
+                </div>
+              </div>
+              <div class="hero__footer">
+                <img class="hero__downarrow" src="images/arrow.svg">
+                <span class="hero__scrolltext">scroll</span>
+              </div>
+            </div>
+          </div>
+          <div id="main-content">
+            <main>
+              <section class="travel">
+                <div class="travel__inner">
+                  <div class="travel__img">
+                    <img src="images/image-4.jpg" alt="">
+                  </div>
+                  <div class="travel__texts">
+                    <div class="travel__texts-inner">
+                      <div class="travel__title main-title">
+                        <span class="purple">大曲の花火について</span>
+                      </div>
+                      <div class="travel__sub sub-title"><strong>全国花火競技大会</strong></div>
+                      <div class="travel__description">
+                        <p>大曲の花火は、秋田県大仙市大曲地区の雄物川河川敷運動公園にて開催される全国花火競技大会であり、
+                          世界で最も質の高い花火が打ち上げられる、花火師が情熱とプライドをかけた大会です！！</p>
+                        <p>詳細については公式オフィシャルサイトをご覧下さい。</p>
+                        <p><a href="https://www.oomagari-hanabi.com/">オフィシャルサイト</a></p>
+                        <h2>2021.8.28<br>
+                          第94回全国花火競技大会まで
+                        </h2>
+                        <p class="timer">
+                          あと
+                          <span id="day"></span>日
+                          <span id="hour"></span>時間
+                          <span id="min"></span>分
+                          <span id="sec"></span>秒
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="houses">
+                <div>
+                  <h2 class="main-title">Movie</h2>
+                  <p class="sub-title">大会提供花火をご覧下さい。</p>
+                  <div class="houses__inner">
+                    <div class="houses__item">
+                      <iframe src="https://www.youtube.com/embed/PCbgjIE77Ro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <p class="houses__title">「奥州曙光」</p>
+                    </div>
+                    <div class="houses__item">
+                      <iframe src="https://www.youtube.com/embed/CYMXnMrJeYw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <p class="houses__title">「生命のまつり」</p>
+                    </div>
+                    <div class="houses__item">
+                      <iframe src="https://www.youtube.com/embed/o3nn6Zs6i04" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <p class="houses__title">「令和祝祭」</p>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="popular">
+                <div class="popular__header">
+                  <h2 class="main-title">Pupular Place</h2>
+                  <p class="sub-title">人気の宿泊先を見つけましょう。</p>
+                </div>
+                <div class="popular__inner">
+                  <div class="popular__container">
+                    <div class="popular__item">
+                      <div class="popular__img">
+                        <img src="images/image-1.jpg" alt="">
+                      </div>
+                      <div class="popular__title">パリ</div>
+                    </div>
+                    <div class="popular__item">
+                      <div class="popular__img">
+                        <img src="images/image-2.jpg" alt="">
+                      </div>
+                      <div class="popular__title">パリ</div>
+                    </div>
+                    <div class="popular__item">
+                      <div class="popular__img">
+                        <img src="images/image-3.jpg" alt="">
+                      </div>
+                      <div class="popular__title">パリ</div>
+                    </div>
+                    <div class="popular__item">
+                      <div class="popular__img">
+                        <img src="images/image-3.jpg" alt="">
+                      </div>
+                      <div class="popular__title">パリ</div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+            </main>
+          </div>
+        </div>
+        <footer class="footer">
+          <div class="logo">
+            <img src="images/logo.png" alt="" class="logo__img">
+            <spna class="logo__title">大曲の花火</spna>
+          </div>
+          <nav class="footer__nav">
+            <ul class="footer__ul">
+              <li class="footer__li"><a href="#">Service</a></li>
+              <li class="footer__li"><a href="#">Contact</a></li>
+              <li class="footer__li"><a href="#">Company</a></li>
+              <li class="footer__li"><a href="#">Sitemap</a></li>
+            </ul>
+            <div class="footer__copyright">
+              &copy; Code Mafia
+            </div>
+          </nav>
+        </footer>
+      </div>
+      <nav class="mobile-menu">
+        <div class="logo">
+          <!-- <img src="images/logo.png" alt="" class="logo__img"> -->
+          <spna class="logo__title">大曲の花火</spna>
+        </div>
+        <ul class="mobile-menu__main">
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#">
+                    <span class="main-title">Our Service</span>
+                    <span class="sub-title">サービスについて</span>
+                </a>
+            </li>
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#">
+                    <span class="main-title">About Us</span>
+                    <span class="sub-title">私たちについて</span>
+                </a>
+            </li>
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#">
+                    <span class="main-title">Contact Us</span>
+                    <span class="sub-title">コンタクト方法</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    </div>
+    <script src="scripts/vendors/swiper.min.js"></script>
+    <script src="scripts/libs/hero-slider.js"></script>
+    <script src="scripts/libs/mobile-menu.js"></script>
+    <script src="scripts/libs/countdown.js"></script>
+    <script src="scripts/main.js"></script>
+  </body>
 </html>
