--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kameron:wght@700&family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/vendors/bootstrap-reboot.css" />
     <link rel="stylesheet" href="styles/vendors/swiper.min.css" />
     <link rel="stylesheet" href="styles/style.css" />
@@ -25,9 +26,10 @@
                 </div>
                 <nav class="header__nav">
                   <ul class="header__ul">
-                    <li class="header__li"><a href="#">Service</a></li>
-                    <li class="header__li"><a href="#">Contact</a></li>
-                    <li class="header__li"><a href="#">Company</a></li>
+                    <li class="header__li"><a href="#global-container">Top</a></li>
+                    <li class="header__li"><a href="#about">About</a></li>
+                    <li class="header__li"><a href="#movie">Movie</a></li>
+                    <li class="header__li"><a href="#photo">Photo</a></li>
                     <!-- <li class="header__li"><a href="#">Sitemap</a></li> -->
                   </ul>
                 </nav>
@@ -64,27 +66,22 @@
           </div>
           <div id="main-content">
             <main>
-              <section class="travel">
-                <div class="travel__inner">
-                  <div class="travel__img">
+              <section class="about" id="about">
+                <div class="about__inner">
+                  <div class="about__img">
                     <img src="images/image-4.jpg" alt="">
                   </div>
-                  <div class="travel__texts">
-                    <div class="travel__texts-inner">
-                      <div class="travel__title main-title">
+                  <div class="about__texts">
+                    <div class="about__texts-inner">
+                      <div class="about__title main-title">
                         <span class="purple">大曲の花火について</span>
                       </div>
-                      <div class="travel__sub sub-title"><strong>全国花火競技大会</strong></div>
-                      <div class="travel__description">
-                        <p>大曲の花火は、秋田県大仙市大曲地区の雄物川河川敷運動公園にて開催される全国花火競技大会であり、
-                          世界で最も質の高い花火が打ち上げられる、花火師が情熱とプライドをかけた大会です！！</p>
-                        <p>詳細については公式オフィシャルサイトをご覧下さい。</p>
-                        <p><a href="https://www.oomagari-hanabi.com/">オフィシャルサイト</a></p>
-                        <h2>2021.8.28<br>
-                          第94回全国花火競技大会まで
-                        </h2>
-                        <p class="timer">
-                          あと
+                      <div class="about__sub sub-title"><strong>全国花火競技大会</strong></div>
+                      <div class="about__description">
+                        <p>大曲の花火（全国花火競技大会）は、日本三大花火大会に認定されている、全国の一流花火師よるガチンコ勝負である。この花火大会はテーマを設けて、創造性の高い花火を自由に組み合わせることにより、ストーリー性があり音楽イメージと合った作品を競い合うもので、毎年斬新なテーマ性に優れた花火が夜空いっぱいに描かれます。
+                        </p>
+                        <h2>2021.8.28<br>第94回全国花火競技大会まで</h2>
+                        <p class="timer">あと
                           <span id="day"></span>日
                           <span id="hour"></span>時間
                           <span id="min"></span>分
@@ -95,60 +92,87 @@
                   </div>
                 </div>
               </section>
-              <section class="houses">
+              
+              <section class="movie" id="movie">
                 <div>
                   <h2 class="main-title">Movie</h2>
-                  <p class="sub-title">大会提供花火をご覧下さい。</p>
-                  <div class="houses__inner">
-                    <div class="houses__item">
+                  <p class="sub-title">フィナーレである、大会提供花火をご覧下さい。</p>
+                  <div class="movie__inner">
+                    <div class="movie__item">
                       <iframe src="https://www.youtube.com/embed/PCbgjIE77Ro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      <p class="houses__title">「奥州曙光」</p>
+                      <p class="movie__title">「奥州曙光」</p>
                     </div>
-                    <div class="houses__item">
+                    <div class="movie__item">
                       <iframe src="https://www.youtube.com/embed/CYMXnMrJeYw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      <p class="houses__title">「生命のまつり」</p>
+                      <p class="movie__title">「生命のまつり」</p>
                     </div>
-                    <div class="houses__item">
+                    <div class="movie__item">
                       <iframe src="https://www.youtube.com/embed/o3nn6Zs6i04" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                      <p class="houses__title">「令和祝祭」</p>
+                      <p class="movie__title">「令和祝祭」</p>
                     </div>
                   </div>
                 </div>
               </section>
-              <section class="popular">
-                <div class="popular__header">
-                  <h2 class="main-title">Pupular Place</h2>
-                  <p class="sub-title">人気の宿泊先を見つけましょう。</p>
+
+              <section class="photo" id="photo">
+                <div class="photo__header">
+                  <h2 class="main-title">Photo Album</h2>
+                  <p class="sub-title">夜空に舞い上がる芸術をご覧下さい。</p>
                 </div>
-                <div class="popular__inner">
-                  <div class="popular__container">
-                    <div class="popular__item">
-                      <div class="popular__img">
-                        <img src="images/image-1.jpg" alt="">
+                <div class="photo__inner">
+                  <div class="photo__container">
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-5.jpg" alt="">
                       </div>
-                      <div class="popular__title">パリ</div>
+                      <div class="photo__title">2013年大会</div>
                     </div>
-                    <div class="popular__item">
-                      <div class="popular__img">
-                        <img src="images/image-2.jpg" alt="">
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-6.jpg" alt="">
                       </div>
-                      <div class="popular__title">パリ</div>
+                      <div class="photo__title">2012年大会</div>
                     </div>
-                    <div class="popular__item">
-                      <div class="popular__img">
-                        <img src="images/image-3.jpg" alt="">
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-7.jpg" alt="">
                       </div>
-                      <div class="popular__title">パリ</div>
+                      <div class="photo__title">2013年大会</div>
                     </div>
-                    <div class="popular__item">
-                      <div class="popular__img">
-                        <img src="images/image-3.jpg" alt="">
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-8.jpg" alt="">
                       </div>
-                      <div class="popular__title">パリ</div>
+                      <div class="photo__title">2013年大会</div>
+                    </div>
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-9.jpg" alt="">
+                      </div>
+                      <div class="photo__title">2012年大会</div>
+                    </div>
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-10.jpg" alt="">
+                      </div>
+                      <div class="photo__title">2013年大会</div>
+                    </div>
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-11.jpg" alt="">
+                      </div>
+                      <div class="photo__title">2014年大会</div>
+                    </div>
+                    <div class="photo__item">
+                      <div class="photo__img">
+                        <img src="images/image-12.jpg" alt="">
+                      </div>
+                      <div class="photo__title">2012年大会</div>
                     </div>
                   </div>
                 </div>
               </section>
+
             </main>
           </div>
         </div>
@@ -159,39 +183,38 @@
           </div>
           <nav class="footer__nav">
             <ul class="footer__ul">
-              <li class="footer__li"><a href="#">Service</a></li>
-              <li class="footer__li"><a href="#">Contact</a></li>
-              <li class="footer__li"><a href="#">Company</a></li>
-              <li class="footer__li"><a href="#">Sitemap</a></li>
+              <li class="footer__li"><a href="https://www.oomagari-hanabi.com/">Official Site</a></li>
+              <li class="footer__li"><a href="https://www.facebook.com/omagari.hanabi/"><i class="fab fa-facebook"></i>Facebook</a></li>
             </ul>
             <div class="footer__copyright">
-              &copy; Code Mafia
+              &copy; 2021 Tatsuro Tozawa
             </div>
           </nav>
         </footer>
       </div>
       <nav class="mobile-menu">
         <div class="logo">
-          <!-- <img src="images/logo.png" alt="" class="logo__img"> -->
           <spna class="logo__title">大曲の花火</spna>
         </div>
         <ul class="mobile-menu__main">
-            <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">
-                    <span class="main-title">Our Service</span>
-                    <span class="sub-title">サービスについて</span>
+              <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#global-container">
+                    <span class="main-title">TOP</span>
                 </a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">
-                    <span class="main-title">About Us</span>
-                    <span class="sub-title">私たちについて</span>
+                <a class="mobile-menu__link" href="#about">
+                    <span class="main-title">ABOUT</span>
                 </a>
             </li>
             <li class="mobile-menu__item">
-                <a class="mobile-menu__link" href="#">
-                    <span class="main-title">Contact Us</span>
-                    <span class="sub-title">コンタクト方法</span>
+                <a class="mobile-menu__link" href="#movie">
+                    <span class="main-title">Movie</span>
+                </a>
+            </li>
+            <li class="mobile-menu__item">
+                <a class="mobile-menu__link" href="#photo">
+                    <span class="main-title">Photo</span>
                 </a>
             </li>
         </ul>
