--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Omagari_Fireworks</title>
+    <meta name="description" content="Omagari Fireworks introduce site.">
+    <link rel="icon" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -30,7 +32,6 @@
                     <li class="header__li"><a href="#about">About</a></li>
                     <li class="header__li"><a href="#movie">Movie</a></li>
                     <li class="header__li"><a href="#photo">Photo</a></li>
-                    <!-- <li class="header__li"><a href="#">Sitemap</a></li> -->
                   </ul>
                 </nav>
                 <button class="mobile-menu__btn">
