--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                       </div>
                       <div class="about__sub sub-title"><strong>全国花火競技大会</strong></div>
                       <div class="about__description">
-                        <p>大曲の花火（全国花火競技大会）は、日本三大花火大会に認定されている、全国の一流花火師よるガチンコ勝負である。この花火大会はテーマを設けて、創造性の高い花火を自由に組み合わせることにより、ストーリー性があり音楽イメージと合った作品を競い合うもので、毎年斬新なテーマ性に優れた花火が夜空いっぱいに描かれます。
+                        <p>大曲の花火（全国花火競技大会）は、日本三大花火大会に認定されている、全国の一流花火師によるガチンコ勝負である。この花火大会はテーマを設けて、創造性の高い花火を自由に組み合わせることにより、ストーリー性があり音楽イメージと合った作品を競い合うもので、毎年斬新なテーマ性に優れた花火が夜空いっぱいに描かれます。
                         </p>
                         <h2>2021.8.28<br>第94回全国花火競技大会まで</h2>
                         <p class="timer">あと
