--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <header class="header">
               <div class="header__inner">
                 <div class="logo">
-                  <img src="images/logo.png" alt="" class="logo__img">
                   <spna class="logo__title">大曲の花火</spna>
                 </div>
                 <nav class="header__nav">
@@ -48,15 +47,15 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="hero__title">2010年大曲の花火</div>
-                  <img src="images/image-1.jpg" alt="" />
+                  <img src="images/compressjpeg/image-1-min.jpg" alt="" />
                 </div>
                 <div class="swiper-slide">
                   <div class="hero__title">2009年大曲の花火</div>
-                  <img src="images/image-2.jpg" alt="" />
+                  <img src="images/compressjpeg/image-2-min.jpg" alt="" />
                 </div>
                 <div class="swiper-slide">
                   <div class="hero__title">2013年大曲の花火</div>
-                  <img src="images/image-3.jpg" alt="" />
+                  <img src="images/compressjpeg/image-3-min.jpg" alt="" />
                 </div>
               </div>
               <div class="hero__footer">
@@ -70,7 +69,7 @@
               <section class="about" id="about">
                 <div class="about__inner">
                   <div class="about__img">
-                    <img src="images/image-4.jpg" alt="">
+                    <img src="images/compressjpeg/image-4-min.jpg" alt="">
                   </div>
                   <div class="about__texts">
                     <div class="about__texts-inner">
@@ -124,49 +123,49 @@
                   <div class="photo__container">
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-5.jpg" alt="">
+                        <img src="images/compressjpeg/image-5-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2013年大会</div>
                     </div>
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-6.jpg" alt="">
+                        <img src="images/compressjpeg/image-6-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2012年大会</div>
                     </div>
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-7.jpg" alt="">
+                        <img src="images/compressjpeg/image-7-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2013年大会</div>
                     </div>
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-8.jpg" alt="">
+                        <img src="images/compressjpeg/image-8-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2013年大会</div>
                     </div>
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-9.jpg" alt="">
+                        <img src="images/compressjpeg/image-9-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2012年大会</div>
                     </div>
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-10.jpg" alt="">
+                        <img src="images/compressjpeg/image-10-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2013年大会</div>
                     </div>
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-11.jpg" alt="">
+                        <img src="images/compressjpeg/image-11-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2014年大会</div>
                     </div>
                     <div class="photo__item">
                       <div class="photo__img">
-                        <img src="images/image-12.jpg" alt="">
+                        <img src="images/compressjpeg/image-12-min.jpg" alt="">
                       </div>
                       <div class="photo__title">2012年大会</div>
                     </div>
@@ -179,7 +178,6 @@
         </div>
         <footer class="footer">
           <div class="logo">
-            <img src="images/logo.png" alt="" class="logo__img">
             <spna class="logo__title">大曲の花火</spna>
           </div>
           <nav class="footer__nav">
